Implement heating/cooling with a simple cooling model

--- a/naunet/templates/common/include/naunet_data.h.j2
+++ b/naunet/templates/common/include/naunet_data.h.j2
@@ -2,13 +2,17 @@
 #define __NAUNET_DATA_H__
 
 // Struct for holding the nessesary additional variables for the problem.
-typedef struct {
+struct NaunetData {
     // clang-format off
     {% for v in variables.varis -%}
         double {{ v }};
     {% endfor %}
-    // clang-format on
 
-} NaunetData;
+    {% for v in variables.tvaris -%}
+        double {{ v }} = -1;
+    {% endfor -%}
+
+    // clang-format on
+};
 
 #endif
