--- a/naunet/templates/common/include/naunet_macros.h.j2
+++ b/naunet/templates/common/include/naunet_macros.h.j2
@@ -6,6 +6,7 @@
 #define NAUNET_FAIL 1
 
 {{ macros.nspec }}
+{{ macros.neqns }}
 {{ macros.nreact }}
 {% if info.method == "sparse" or info.method == "cusparse" -%}
 {{ macros.nnz }}
