--- a/naunet/templates/common/include/naunet_physics.h.j2
+++ b/naunet/templates/common/include/naunet_physics.h.j2
@@ -3,6 +3,9 @@
 
 /* {% if info.device == "gpu" %} */
 __device__ __host__ double GetMantleDens(double *y);
+__device__ __host__ double GetMu(double *y);
+__device__ __host__ double GetGamma(double *y);
+__device__ __host__ double GetNumDens(double *y);
 __device__ double GetShieldingFactor(int specidx, double h2coldens,
                                      double spcoldens, double tgas, int method);
 __device__ double GetH2shielding(double coldens, int method);
@@ -15,6 +18,9 @@ __device__ double GetCOshieldingInt(double tgas, double h2col, double coldens);
 __device__ double GetN2shieldingInt(double tgas, double h2col, double coldens);
 /* {% else %} */
 double GetMantleDens(double *y);
+double GetMu(double *y);
+double GetGamma(double *y);
+double GetNumDens(double *y);
 double GetShieldingFactor(int specidx, double h2coldens, double spcoldens,
                           double tgas, int method);
 double GetH2shielding(double coldens, int method);
