--- a/naunet/templates/common/src/naunet_physics.cpp.j2
+++ b/naunet/templates/common/src/naunet_physics.cpp.j2
@@ -9,6 +9,24 @@
 double GetMantleDens(double *y) {
     return {{ physics.mantles | stmwrap(80, 8) }};
 }
+
+{% if info.device == "gpu" -%} __device__ __host__ {% endif -%}
+double GetMu(double *y) {
+    return {{ physics.mu | stmwrap(80, 8) }};
+}
+
+{% if info.device == "gpu" -%} __device__ __host__ {% endif -%}
+double GetGamma(double *y) {
+    return {{ physics.gamma | stmwrap(80, 8) }};
+}
+
+{% if info.device == "gpu" -%} __device__ __host__ {% endif -%}
+double GetNumDens(double *y) {
+    double numdens = 0.0;
+
+    for (int i = 0; i < NSPECIES; i++) numdens += y[i];
+    return numdens;
+}
 // clang-format on
 
 // clang-format off
