Split ode to smaller files

--- a/naunet/templates/cvode/src/CMakeLists.txt.j2
+++ b/naunet/templates/cvode/src/CMakeLists.txt.j2
@@ -2,7 +2,9 @@ set(
     OBJTARGETS
         naunet_constants
         naunet_physics
-        naunet_ode
+        naunet_rates
+        naunet_fex
+        naunet_jac
 )
 
 {% if info.device == "gpu" -%}
